@startuml authentication_class_diagram
skinparam componentStyle rectangle
skinparam classAttributeIconSize 0

title Class Diagram - Authentication (SOLID / Layered Architecture)

' ==================== LAYER 1: PRESENTATION LAYER ====================
package "Presentation Layer" {
    class LoginPage <<boundary>> {
        +email: String
        +password: String
        +handleSubmit(): void
    }

    class AuthController <<controller>> {
        -authService: IAuthService
        +login(request: LoginRequest): JsonResponse
    }
}

' ==================== LAYER 2: BUSINESS LOGIC LAYER ====================
package "Business Logic Layer" {
    interface IAuthService <<service interface>> {
        +login(request: LoginRequest): LoginResponse
    }

    class AuthService <<service>> {
        -userRepository: IUserRepository
        +login(request: LoginRequest): LoginResponse
        -verifyPassword(raw: String, hashed: String): bool
        -generateToken(user: User): String
    }
}

' ==================== LAYER 3: DATA ACCESS LAYER ====================
package "Data Access Layer" {
    interface IUserRepository <<repository interface>> {
        +findByEmail(email: String): User
    }

    class UserRepository <<repository>> {
        +findByEmail(email: String): User
    }
}

' ==================== LAYER 4: DATA TRANSFER OBJECTS (DTO) ====================
package "Data Transfer Objects (DTO)" {
    class LoginRequest <<dto>> {
        +email: String
        +password: String
    }

    class LoginResponse <<dto>> {
        +token: String
        +user: User
    }
}

' ==================== LAYER 5: DOMAIN ENTITIES ====================
package "Domain Entities" {
    class User <<entity>> {
        -id: int
        -email: string
        -password: string
        -role: string
        +getAuthPassword(): string
    }
}

' ==================== RELATIONSHIPS & DEPENDENCIES ====================

' UI Layer Relationships
LoginPage ..> LoginRequest : constructs
LoginPage --> AuthController : calls

' Controller Layer Relationships
AuthController --> IAuthService : injects
AuthController ..> LoginRequest : dependency
AuthController ..> LoginResponse : dependency

' Service Layer Relationships
AuthService .up.|> IAuthService : implements
AuthService --> IUserRepository : injects
AuthService ..> LoginResponse : creates
AuthService ..> User : dependency

' Data Access Layer Relationships
UserRepository .up.|> IUserRepository : implements
UserRepository ..> User : retrieves

' DTO & Entity Relationships
LoginResponse "1" *-- "1" User : contains

@enduml